# axon-lang

./: .gitignore  LANGUAGE_SPEC.md  QA_REPORT.md  README.md  pyproject.toml
axon/: __init__.py  __main__.py  formatter.py  linter.py  modules.py  plugins.py  semantic.py  watcher.py
axon/lsp/: __init__.py  completions.py  diagnostics.py  hover.py  server.py
axon/parser/: __init__.py  ast_nodes.py  lexer.py  parser.py
axon/runtime/: __init__.py  config.py  executor.py
axon/transpiler/: __init__.py  engine.py
axon/types/: __init__.py
cli/: main.py
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
editors/vscode/syntaxes/: axon.tmLanguage.json
examples/: audio_speech.axon  automl_pipeline.axon  complete_vision.axon  diffusion_model.axon  distributed_training.axon  end_to_end_production.axon  example_plugin.py  federated_learning.axon  gan_image_generation.axon  generative_ai.axon  graph_neural_network.axon  llm_agent.axon  model_optimization.axon  multimodal_vlm.axon  nlp_finetuning.axon  rag_pipeline.axon  reinforcement_learning.axon  tabular_ml.axon  time_series_forecasting.axon
tests/: test_axon.py
